HTML display problem fixed. Thymeleaf works well.

--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -10,9 +10,9 @@
 <table class="table table-striped">
     <thead>
     <tr>
-        <th style="width: 150px;">Id</th>
-        <th style="width: 150px;">First name</th>
-        <th style="width: 150px;">Last name</th>
+        <th>Id</th>
+        <th>First name</th>
+        <th>Last name</th>
     </tr>
     </thead>
     <tbody>
