--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -7,12 +7,12 @@
 <body>
 <h2 th:text="'List of Vets'">List of Vets...</h2>
 
-<table class="table-striped">
+<table class="table table-striped">
     <thead>
     <tr>
-        <th style="width: 150px">Id</th>
-        <th style="width: 150px">First name</th>
-        <th style="width: 150px">Last name</th>
+        <th>Id</th>
+        <th>First name</th>
+        <th>Last name</th>
     </tr>
     </thead>
     <tbody>
