Implemented Vets List View. Closes #60

--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,21 +5,21 @@
     <title>List of Vets</title>
 </head>
 <body>
-<h2 th:text="'List of Vets'">List of Vets...</h2>
+<h2 th:text="'List of Vets'">List of Vets</h2>
 
 <table class="table table-striped">
     <thead>
     <tr>
-        <th>Id</th>
-        <th>First name</th>
-        <th>Last name</th>
+        <th>Name</th>
+        <th>Specialities</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="vet : ${vets}">
-        <td th:text="${vet.id}">1</td>
-        <td th:text="${vet.firstName}">Jas</td>
-        <td th:text="${vet.lastName}">Fasola</td>
+        <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+        <td><span th:each="speciality :${vet.specialities}"
+                  th:text="${speciality.description}"></span>
+            <span th:if="${vet?.specialities?.size() == 0}">none</span></td>
     </tr>
     </tbody>
 </table>
